--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,22 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,700;0,800;0,900;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,28 +37,28 @@
     -->
     <title>BETONDO</title>
     <style>
-        * {
-          margin: 0;
-          font-family: 'Inter', sans-serif;
-        }
-        #loadingScreen {
-            width: 100%;
-            height: 100vh;
-            background: rgb(27, 26, 26);
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .loadingScreenText {
-          color: #fff;
-          font-size: 2rem;
-          font-style: italic;
-          font-weight: bold;
-        }
-        .loadingScreenText > span {
-          color: #0E8AE7;
-        }
+      * {
+        margin: 0;
+        font-family: "Inter", sans-serif;
+      }
+      #loadingScreen {
+        width: 100%;
+        height: 100vh;
+        background: rgb(27, 26, 26);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .loadingScreenText {
+        color: #fff;
+        font-size: 2rem;
+        font-style: italic;
+        font-weight: bold;
+      }
+      .loadingScreenText > span {
+        color: #0e8ae7;
+      }
     </style>
   </head>
   <body>
